Commit from TeleportHQ

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -6,3 +6,15 @@
   align-items: center;
   flex-direction: column;
 }
+.home-video {
+  width: 320px;
+  height: 180px;
+}
+.home-video1 {
+  width: 320px;
+  height: 180px;
+}
+.home-video2 {
+  width: 320px;
+  height: 180px;
+}
