--- a/src/views/home.css
+++ b/src/views/home.css
@@ -22,3 +22,11 @@
   width: 320px;
   height: 180px;
 }
+.home-video4 {
+  width: 320px;
+  height: 180px;
+}
+.home-video5 {
+  width: 320px;
+  height: 180px;
+}
