--- a/src/views/home.css
+++ b/src/views/home.css
@@ -30,3 +30,15 @@
   width: 320px;
   height: 180px;
 }
+.home-video6 {
+  width: 320px;
+  height: 180px;
+}
+.home-video7 {
+  width: 320px;
+  height: 180px;
+}
+.home-video8 {
+  width: 320px;
+  height: 180px;
+}
